force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/Exhibition_Meeting_Room_Reservation__c.object-meta.xml
<CustomObject>
    <label>Exhibition Meeting Room Reservation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibition Meeting Room Reservations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>