force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Accompanying_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Accompanying_Personnel__c</fullName>
    <label>Participates (Perosnnel)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>