force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Customer_Duty__c.field-meta.xml
<CustomField>
    <fullName>Customer_Duty__c</fullName>
    <label>Customer Duty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>