force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Department_Sector_Company__c.field-meta.xml
<CustomField>
    <fullName>Department_Sector_Company__c</fullName>
    <label>Department/Sector/Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>