force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Exhibition_Metting_Room_Info__r.End_Date__c</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>