force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>Exhibition_Metting_Room_Info__r.End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>Time</type>
</CustomField>