force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Exhibition_Metting_Room_Info__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Metting_Room_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Meeting Room Info</label>
    <referenceTo>Exhibition_Meeting_Room_Info__c</referenceTo>
    <relationshipLabel>Exhibition Meeting Room Reservations</relationshipLabel>
    <relationshipName>Exhibition_Meeting_Room_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>