force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Hisense_Participates_Leader__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Participates_Leader__c</fullName>
    <label>Hisense Participates (Leader)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>