force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Leader__c.field-meta.xml
<CustomField>
    <fullName>Leader__c</fullName>
    <label>Customer Participates (Leader)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>