force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Meeting_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Purpose__c</fullName>
    <label>Meeting Purpose</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>