force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Metting_Date__c.field-meta.xml
<CustomField>
    <fullName>Metting_Date__c</fullName>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>