force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Metting_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Metting_End_Time__c</fullName>
    <label>Meeting End Time</label>
    <type>Time</type>
</CustomField>