force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Number_Of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Participants__c</fullName>
    <label>Number Of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>