force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/s__c.field-meta.xml
<CustomField>
    <fullName>s__c</fullName>
    <label>s</label>
    <type>DateTime</type>
</CustomField>