force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <formula>Exhibition_Metting_Room_Info__r.Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>