force-app/main/default/objects/Exhibition_Meeting_Room_Reservation__c/validationRules/Metting_Purpose.validationRule-meta.xml
<ValidationRule>
    <fullName>Metting_Purpose</fullName>
    <active>true</active>
    <description>The field must be at least 20 characters long</description>
    <errorConditionFormula>LEN(Meeting_Purpose__c)&lt; 20</errorConditionFormula>
    <errorDisplayField>Meeting_Purpose__c</errorDisplayField>
    <errorMessage>The Meeting Purpose field must be at least 20 characters long</errorMessage>
</ValidationRule>